# Transactions-data

./: .env_ex  README.md  function_operation_report.txt  main.py  pyproject.toml
data/: data.json
htmlcov/: index.html
src/: ex.py  reports.py  services.py  user_settings_json.py  utils.py  views.py
tests/: conftest.py  test_report.txt  test_reports.py  test_services.py  test_user_settings_json.py  test_utils.py  test_views.py
